[package]
name = "balancer_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.7.0"
dotenv = "0.15.0"
hex = "0.4"
snailquote = "0.3.1"
tokio = { version= "1", features = ["full"] }
web3 = "0.17.0"

[dev-dependencies]
# For examples