[package]
name = "balancer_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.7.0"
dotenv = "0.15.0"
ethabi = "13.0.0"
ethers-core = "0.10.0"
ethcontract = "0.17.0"
ethcontract-common = "0.17.0"
hex = "0.4"
snailquote = "0.3.1"
tokio = { version= "1", features = ["full"] }
ethereum-hexutil = "0.2.3"
web3 = "0.17.0"

[build-dependencies]
ethcontract-generate = "0.17.0"

[dev-dependencies]
# For examples