[package]
name = "balancer_sdk"
version = "0.1.7-alpha"
description = "A Rust SDK which provides commonly used utilties for interacting with Balancer Protocol V2"
documentation = "https://docs.rs/crate/balancer_sdk"
edition = "2021"
homepage = "https://github.com/drewdrewthis/balancer-sdk/tree/develop/balancer-rs"
repository = "https://github.com/drewdrewthis/balancer-sdk/tree/develop/balancer-rs"
readme = "README.md"
keywords = ["balancer", "crypto"]
catagories = ["API bindings", "Accessibility"]
license = "MIT OR Apache-2.0"
exclude = [
  # We only use this for local development
  "build.rs",
]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.7.0"
dotenv = "0.15.0"
ethabi = "13.0.0"
ethers-core = "0.10.0"
ethcontract = "0.17.0"
ethcontract-common = "0.17.0"
hex = "0.4"
snailquote = "0.3.1"
tokio = { version= "1", features = ["full"] }
ethereum-hexutil = "0.2.3"
web3 = "0.17.0"
tokio-test = "0.4.2"

[build-dependencies]
ethcontract-generate = "0.17.0"

[dev-dependencies]
# For examples
